Fix 'Featured' flair error on mobile

--- a/style.css
+++ b/style.css
@@ -295,6 +295,7 @@ a:hover::after {
     height: 17.2rem;
     border-radius: 1rem;
     margin-right: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .price {
